# predicate_optimizer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  test.cpp
src/predicate_optimizer/: CMakeLists.txt  bitset_algebra.cpp  bitset_algebra.h  bitset_algebra_test.cpp  expression.cpp  expression.h  expression_dnf.cpp  expression_dnf.h  expression_dnf_test.cpp  expression_rewrite.cpp  expression_rewrite.h  expression_rewrite_test.cpp  expression_utils.h  hash.h  intervals_simplifier.cpp  intervals_simplifier.h  intervals_simplifier_test.cpp  petrick.cpp  petrick.h  petrick_test.cpp  quine_mccluskey.cpp  quine_mccluskey.h  quine_mccluskey_test.cpp  stream_utils.h
